@@ -123,6 +123,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17177: The imp module is pending deprecation.
+
 - subprocess: Prevent a possible double close of parent pipe fds when the
   subprocess exec runs into an error.  Prevent a regular multi-close of the
   /dev/null fd when any of stdin, stdout and stderr was set to DEVNULL.
